@@ -46,7 +46,8 @@ float ExecutiveDist(PyMOLGlobals *G,char *nam,char *s1,char *s2,int mode,float c
 void ExecutiveBond(PyMOLGlobals *G,char *s1,char *s2,int order,int add);
 int ExecutiveIterate(PyMOLGlobals *G,char *s1,char *expr,int read_only,int quiet);
 int ExecutiveIterateList(PyMOLGlobals *G,char *s1,PyObject *list,int read_only,int quiet);
-int ExecutiveSelectList(PyMOLGlobals *G,char *sele_name,char *s1,PyObject *list,int quiet);
+int ExecutiveSelectList(PyMOLGlobals *G,char *sele_name,char *s1,
+                        PyObject *list,int quiet,int id_type);
 void ExecutiveLabel(PyMOLGlobals *G,char *s1,char *expr,int quiet);
 void ExecutiveIterateState(PyMOLGlobals *G,int i1,char *s1,char *expr,int read_only,
                            int atomic_props,int quiet);
